--- a/v3/changelog.txt
+++ b/v3/changelog.txt
@@ -1,4 +1,4 @@
-v3.0 - 01.01.2020
+v3.0 - 01.01.2020----
 @-@
 Program design was improved.
 Menu design improved.
@@ -11,4 +11,7 @@ Lag problem solved. /cips fixed.
 Added automatic gift box collection feature in Vanilla maps.
 Wing skill feature added.
 Added cheat key change feature.
-Added to change the transparency ratio of other players.
+Added to change the transparency ratio of other players.-----
+-------------
+----------
+------
